improved openapi documentation - implemented return values to reflect response scheme (with example values) - grouped api endpoints in notes, media
